# generative-ai-course

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTERN_GUIDE.md  LICENSE  Makefile  README.md  SSH_SETUP_GUIDE.md  STUDENT_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  security.md
.github/: pull_request_template.md  pull_request_template_student.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  task-automation.yml
capstone-projects/: README.md
lectures/week-01/: README.md
lectures/week-02/: README.md
lectures/week-03/: README.md
lectures/week-04/: README.md
lectures/week-05/: README.md
lectures/week-06/: README.md
lectures/week-07/: README.md
lectures/week-08/: README.md
scripts/: assign_tasks.py  check_submission.py  create_sprint_board.py  dependency_report.py  generate_feedback.py  generate_tasks.py  test_submission.py
student-submissions/: README.md
syllabus/: README.md
workshops/week-01/: README.md
